additional testing fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,5 +209,7 @@ endif(regenerate_sources)
 
 # Testing option
 if(enable_test)
+# gtest configuration for folly
+    enable_testing()
     include(folly/CMake/testing.cmake)
 endif(enable_test)
