Add ThreadName.h to folly's Makefile.am
Summary:
fbthrift depends on <folly/ThreadName.h>, which isn't currently
getting installed as part of the autotools build.  Add it to Makefile.am

Test Plan:
Made this change to folly, re-autogen/configure/install, and
then was able to successfully compile fbthrift's compiler

Reviewed By: davejwatson@fb.com

Subscribers: doug, folly@lists

FB internal diff: D1397084

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -162,6 +162,7 @@ nobase_follyinclude_HEADERS = \
 	ThreadCachedArena.h \
 	ThreadCachedInt.h \
 	ThreadLocal.h \
+	ThreadName.h \
 	TimeoutQueue.h \
 	Traits.h \
 	Unicode.h \
