Fix for folly open source build on Ubuntu 12.04
Summary: On 12.04, there's both /usr/lib/libiberty.a and /usr/lib/libiberty_pic.a, and _pic is the one we want to build a Folly shared library.

Test Plan: build on Ubuntu 12.04

Reviewed By: meyering@fb.com

FB internal diff: D1402194

--- a/folly/configure.ac
+++ b/folly/configure.ac
@@ -160,7 +160,7 @@ AC_LINK_IFELSE(
     AC_DEFINE([HAVE_WEAK_SYMBOLS], [1],
               [Define to 1 if the linker supports weak symbols.])])
 
-AC_SEARCH_LIBS([cplus_demangle_v3_callback], [iberty])
+AC_SEARCH_LIBS([cplus_demangle_v3_callback], [iberty_pic iberty])
 if test "$ac_cv_search_cplus_demangle_v3_callback" != "no" ; then
   AC_DEFINE([HAVE_CPLUS_DEMANGLE_V3_CALLBACK], [1],
             [Define to 1 if we have cplus_demangle_v3_callback.])
