Use pipe2 in Subprocess; platform-specific config
Summary:
We've wanted to use pipe2 in Subprocess for a while, but that's not supported
on glibc 2.5.1. This is not a problem in OSS (autoconf can solve this),
but, internally, we don't run autoconf; add an internal platform include file
with such per-platform differences.

Test Plan: fbconfig -r folly && fbmake runtests_opt

Reviewed By: meyering@fb.com

Subscribers: jhj, lesha, kma, agallagher

FB internal diff: D1422128

--- a/folly/configure.ac
+++ b/folly/configure.ac
@@ -271,7 +271,8 @@ AC_CHECK_FUNCS([getdelim \
                 rallocm \
                 malloc_size \
                 malloc_usable_size \
-                memrchr])
+                memrchr \
+                pipe2])
 
 if test "$ac_cv_func_pthread_yield" = "no"; then
    AC_CHECK_HEADERS([sched.h])
