Enforce that only one version of folly is loaded at the same time
Test Plan: folly/test, OSS build, check the macro in separate file

Reviewed By: dancol@fb.com

FB internal diff: D1448086

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -245,6 +245,7 @@ libfolly_la_SOURCES = \
 	ThreadCachedArena.cpp \
 	TimeoutQueue.cpp \
 	Uri.cpp \
+	Version.cpp \
 	wangle/InlineExecutor.cpp \
 	wangle/ManualExecutor.cpp \
 	wangle/ThreadGate.cpp \
