Move HHWheelTimer to folly
Summary:
Move wheel timer to folly.  Needed for abstracting some code out of proxygen/thrift

The only code change was removing usage of thrift's Util::currentTime() in favor of std::chrono::steady_clock::now()

Test Plan: fbconfig thrift/lib/cpp/test:HHWheelTimerTest; fbmake runtests

Reviewed By: alandau@fb.com

Subscribers: doug, alandau, bmatheny, njormrod

FB internal diff: D1519909

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -115,6 +115,7 @@ nobase_follyinclude_HEADERS = \
 	io/async/EventHandler.h \
 	io/async/EventUtil.h \
 	io/async/NotificationQueue.h \
+	io/async/HHWheelTimer.h \
 	io/async/Request.h \
 	io/async/TimeoutManager.h \
 	json.h \
@@ -233,6 +234,7 @@ libfolly_la_SOURCES = \
 	io/async/EventBase.cpp \
 	io/async/EventHandler.cpp \
 	io/async/Request.cpp \
+	io/async/HHWheelTimer.cpp \
 	json.cpp \
 	detail/MemoryIdler.cpp \
 	MacAddress.cpp \
