move socketaddress to folly
Summary:
Goes with IPAddress and MACAddress already in folly.

* change namespace, add typedef in thrift.  Had to update forward decls to folly namespace.
* change exception types to std:: types instead of TTransportException.  I fbgs'd for everywhere I could find trying to catch these and updated the type, there looked like there were only ~9 files or so.

Test Plan: contbuild.

@override-unit-failures

Tests already passed in last run

Reviewed By: simpkins@fb.com

Subscribers: doug, ps, alandau, everstore-dev@, njormrod, fugalh, alikhtarov, bmatheny, jsedgwick

FB internal diff: D1556916

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -148,6 +148,7 @@ nobase_follyinclude_HEADERS = \
 	ScopeGuard.h \
 	SmallLocks.h \
 	small_vector.h \
+	SocketAddress.h \
 	sorted_vector_types.h \
 	SpookyHashV1.h \
 	SpookyHashV2.h \
@@ -246,6 +247,7 @@ libfolly_la_SOURCES = \
 	MemoryMapping.cpp \
 	Random.cpp \
 	SafeAssert.cpp \
+	SocketAddress.cpp \
 	SpookyHashV1.cpp \
 	SpookyHashV2.cpp \
 	stats/Instantiations.cpp \
