--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -71,6 +71,8 @@ nobase_follyinclude_HEADERS = \
 	experimental/EventCount.h \
 	experimental/io/FsUtil.h \
 	experimental/TestUtil.h \
+	experimental/wangle/ConnectionManager.h \
+	experimental/wangle/ManagedConnection.h \
 	FBString.h \
 	FBVector.h \
 	File.h \
@@ -256,7 +258,9 @@ libfolly_la_SOURCES = \
 	wangle/ManualExecutor.cpp \
 	wangle/ThreadGate.cpp \
 	experimental/io/FsUtil.cpp \
-	experimental/TestUtil.cpp
+	experimental/TestUtil.cpp \
+	experimental/wangle/ConnectionManager.cpp \
+	experimental/wangle/ManagedConnection.cpp
 
 if HAVE_LINUX
 nobase_follyinclude_HEADERS += \
