move asyncserversocket to folly
Summary:
Changes:
* namespace to folly
* some std::chrono replacesments
* Moves shutdownSocketSet stuff to thriftserver instead of in the socket itself.
* Changes exception types.  I don't see anywhere that uses the TAsync*SERVER*socket exceptions depending on the TTransport type, but I could be wrong? I don't really know what to do about the exception types

unittests still postponed overnight.

Test Plan:
fbconfig -r thrift; fbmake runtests
fbconfig -r proxygen; fbmake runtests

Reviewed By: dcsommer@fb.com

Subscribers: hphp-diffs@, ps, folly-diffs@, anca, trunkagent, jsedgwick, fugalh, doug, alandau, bmatheny, njormrod

FB internal diff: D1579187

--- a/folly/Makefile.am
+++ b/folly/Makefile.am
@@ -130,6 +130,7 @@ nobase_follyinclude_HEADERS = \
 	io/TypedIOBuf.h \
 	io/ShutdownSocketSet.h \
 	io/async/AsyncTimeout.h \
+	io/async/AsyncServerSocket.h \
 	io/async/DelayedDestruction.h \
 	io/async/EventBase.h \
 	io/async/EventBaseManager.h \
@@ -256,6 +257,7 @@ libfolly_la_SOURCES = \
 	io/RecordIO.cpp \
 	io/ShutdownSocketSet.cpp \
 	io/async/AsyncTimeout.cpp \
+	io/async/AsyncServerSocket.cpp \
 	io/async/EventBase.cpp \
 	io/async/EventBaseManager.cpp \
 	io/async/EventHandler.cpp \
